<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.johnporrasr.appclinica.MainActivity">

    <TextView
        android:id="@+id/txtGrados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="91dp"
        android:text="@string/txtGrados"
        android:textColor="@color/colorGrados"
        android:textSize="72sp" />

    <TextView
        android:id="@+id/txtCiudad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtGrados"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/txtCiudad"
        android:textColor="@color/colorCiudad"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/txtEstado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtCiudad"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:text="@string/txtEstado"
        android:textColor="@color/colorEstatus"
        android:textSize="24sp" />
</RelativeLayout>
